--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
     rel="stylesheet"
   />
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="assets/style.css">
 
     <title>Ferramenta Interativa de Estudos - Kauani e Isabella</title>
 
