--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
-    rel="stylesheet"
-  />
-  <link rel="stylesheet" href="assets/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
+        rel="stylesheet" />
+    <link rel="stylesheet" href="assets/style.css">
 
     <title>Ferramenta Interativa de Estudos - Kauani e Isabella</title>
 
@@ -20,24 +19,37 @@
     <main>
         <section id="container">
             <article class="cartão">
-                <div class="cartão_conteudo">
+                <div class="cartão__conteudo">
                     <h3>Programação</h3>
-                    <div class="cartão_conteudo_pergunta">
-                        O que é Java Script?
-                        <div class="cartão_conteudo_resposta">
-                            O JavaScript (JS) é uma linguagem de programação que nos permite interagir com a página
+                    <div class="cartão__conteudo__pergunta">
+                        <p>O que é Java Script?</p>
+                        <div class="cartão__conteudo__resposta">
+                            <p>O JavaScript (JS) é uma linguagem de programação que nos permite interagir com a página
+                            </p>
                         </div>
                     </div>
                 </div>
             </article>
             <article class="cartão">
-                <div class="cartão_conteudo">
+                <div class="cartão__conteudo">
                     <h4>Programação</h4>
-                    <div class="cartão_conteudo_pergunta">
-                        O que é CSS?
-                        <div class="cartão_conteudo_resposta">
-                            É uma linguagem de programação utilizada para dar estilo á página
+                    <div class="cartão__conteudo__pergunta">
+                        <p>O que é CSS?</p>
+                        <div class="cartão__conteudo__resposta">
+                            <p>É uma linguagem de programação utilizada para dar estilo á página</p>
                         </div>
+                    </div>
+                </div>
+            </article>
+
+            <article class="cartao">
+                <div class="cartao__conteudo">
+                    <h3> Programação </h3>
+                    <div class="cartao__conteudo__pergunta">
+                        <p>O que é HTML</p>
+                    </div>
+                    <div class="cartao__conteudo__resposta">
+                        <p>É uma linguagem de programação que nos permite criar a estrutura do noso site</p>
                     </div>
                 </div>
             </article>
