--- a/index.html
+++ b/index.html
@@ -18,24 +18,26 @@
 <body>
     <main>
         <section id="container">
-            <article class="cartão">
-                <div class="cartão__conteudo">
+
+            <article class="cartao">
+                <div class="cartao__conteudo">
                     <h3>Programação</h3>
-                    <div class="cartão__conteudo__pergunta">
+                    <div class="cartao__conteudo__pergunta">
                         <p>O que é Java Script?</p>
-                        <div class="cartão__conteudo__resposta">
+                        <div class="cartao__conteudo__resposta">
                             <p>O JavaScript (JS) é uma linguagem de programação que nos permite interagir com a página
                             </p>
                         </div>
                     </div>
                 </div>
             </article>
-            <article class="cartão">
-                <div class="cartão__conteudo">
-                    <h4>Programação</h4>
-                    <div class="cartão__conteudo__pergunta">
+
+            <article class="cartao">
+                <div class="cartao__conteudo">
+                    <h3>Programação</h3>
+                    <div class="cartao__conteudo__pergunta">
                         <p>O que é CSS?</p>
-                        <div class="cartão__conteudo__resposta">
+                        <div class="cartao__conteudo__resposta">
                             <p>É uma linguagem de programação utilizada para dar estilo á página</p>
                         </div>
                     </div>
@@ -53,8 +55,10 @@
                     </div>
                 </div>
             </article>
+
         </section>
     </main>
+
     <footer>
         <p>Projeto desenvolvido por Kauani e Isabella</p>
     </footer>
